Basic layout flex

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -16,6 +16,7 @@ Grey dark 3: #999
 
 */
 
+
 :root {
   --color-primary: #eb2f64;
   --color-primary-light: #FF3366;
@@ -29,6 +30,9 @@ Grey dark 3: #999
   --color-grey-dark-1: #333;
   --color-grey-dark-2: #777;
   --color-grey-dark-3: #999;
+
+  --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, .3);
+
 }
 
 * {
