--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,21 @@ body {
   flex: 1;
   background-color: orangered; }
 
+.logo {
+  height: 3.25rem; }
+
+.search__icon {
+  height: 2rem;
+  width: 2rem; }
+
+.user-nav__icon {
+  height: 2.25rem;
+  width: 2.25rem; }
+
+.user-nav__user-photo {
+  height: 3.75rem;
+  border-radius: 50%; }
+
 * {
   margin: 0;
   padding: 0; }
