--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,6 @@ body {
 .hotel-view {
   background-color: #fff;
   flex: 1;
-  background-color: orangered;
   height: 80rem; }
 
 .logo {
@@ -204,6 +203,22 @@ body {
   text-align: center;
   padding: 2.5rem;
   color: var(--color-grey-light-4); }
+
+.gallery {
+  display: flex; }
+  .gallery__photo {
+    width: 100%;
+    display: block; }
+
+.overview {
+  display: flex;
+  align-items: center; }
+  .overview__start {
+    margin-right: auto; }
+  .overview__icon-star, .overview__icon-location {
+    width: 1.75rem;
+    height: 1.75rem;
+    fill: var(--color-primary); }
 
 * {
   margin: 0;
