--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -181,5 +181,47 @@
   text-align: center;
   padding: 2.5rem;
   color: var(--color-grey-light-4);
+}
+
+// GALERY
+.gallery {
+  display: flex;
+
+  &__item {}
+
+  &__photo {
+    width: 100%;
+    display: block;
+  }
+}
+
+// OVERVIEW
+.overview {
+  display: flex;
+  align-items: center;
+
+
+  &__heading {}
+
+  &__start {
+    // this is good trick
+    // flex: 1;
+    margin-right: auto;
+  }
+
+  &__icon-star,
+  &__icon-location {
+    width: 1.75rem;
+    height: 1.75rem;
+    fill: var(--color-primary);
+  }
+
+  &__location {}
+
+  &__rating {}
+
+  &__rating-average {}
+
+  &__rating-count {}
 
 }
