--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -34,6 +34,7 @@
 }
 
 .detail {
+  font-size: 1.4rem;
   display: flex;
   padding: 4.5rem;
   background-color: var(--color-grey-light-1);
@@ -51,6 +52,8 @@
 }
 
 .user-reviews {
-  background-color: aqua;
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
