--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -34,8 +34,14 @@ Grey dark 3: #999
   --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, .3);
   --shadow-light: 0 2rem 5rem rgba(0, 0, 0, .06);
   --line: 1px solid var(--color-grey-light-2);
-
 }
+
+$bp-largest: 75em; // 1200px
+$bp-large: 68.75em; // 1100px
+$bp-medium: 56.25em; // 900px
+$bp-small: 37.5em; // 600px
+
+
 
 * {
   margin: 0;
@@ -51,6 +57,10 @@ Grey dark 3: #999
 html {
   box-sizing: border-box;
   font-size: 62.5%; //1rem = 10px; 10px/16 = 62.5%
+
+  @media only screen and (max-width:$bp-large) {
+    font-size: 50%;
+  }
 }
 
 body {
